--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 
 h1 {
     font-family: "Bungee Outline",sans-serif;
-    color: #ff7e14;
+    color: var(--orange);
 }
 
 
@@ -38,13 +38,13 @@ h2,h3,h4 {
     --orange: #ff7e14;
     --orangeb:#F5CC7C;
     --yellow: #FFBB46;
-    --font:"Black Ops One";
-    
+    /* --font:"Black Ops One";
+     */
     
 } 
 
 .section-container {
-    background-color: black;
+    background-color: var(--black);
 }
 
 .section {
@@ -57,7 +57,6 @@ h2,h3,h4 {
     width: 95%;
     max-width: 1300px;
 }
-
 
 button {
     font-family: "Nunito",sans-serif;
@@ -74,27 +73,20 @@ button {
     transition: all 0.4 linear;
 }
 
-/* button :hover {
-    background-color: #c79900;
-    transition: all 0.4 linear;
-    
-} */
 
-.section-title {
+/* .section-title {
     font-weight: 700;
     font-size: 30px;
+} */
 
-}
-
-.section-p {
+/* .section-p {
     font-size: 12px;
     font-weight: 300;
-}
+} */
 
-.section-p-small {
+/* .section-p-small {
     font-size: 10px;
-    font-weight: 300px;
-}
+} */
 
 
 /* Header */
@@ -113,16 +105,13 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 80px 0px 50px;
-    position: sticky;
-    top:0%;  
+    padding: 0px 80px 0px 50px; 
 }
 
 .logo-container {
     height: 220px;
     display: flex;
     align-items: center;
-
 }
 
 .logo-container img {
@@ -160,24 +149,21 @@ button {
 }
 
 .navbar a:hover {
-    color: #ff7e14;
+    color: var(--orange);
 
 }
 
-.navbar-list li :last-child > a {
+.navbar-list li:last-child > a {
     border: 1px solid white;
-    font-size: 14px;
-    padding: 8px 40px;
-    border-radius: 3px;
+    font-size: 22px;
+    padding: 8px 35px;
+    border-radius: 5px;
     transition: all 0.3s linear;
 } 
 
 
- .navbar-list li :last-child > a :hover {
-    background-color: blue;
-    color: var(grey);
-    transition: all 0.3 linear;
-    font-weight: 700;
+ .navbar-list li:last-child > a:hover {
+    font-size: 25px;
 } 
 
 
@@ -185,6 +171,7 @@ button {
 
 .header {
   padding: 0px 50px 0px 10px;  
+
 }
 
 .navbar i {
@@ -220,40 +207,32 @@ button {
 }
 
 
-
-.img-hero {
-    position: absolute;
-    max-height: 700px;
-    width: 100%;
-}
-
-
-
 .description-container {
     display: flex;
     flex-direction: column;
     flex: 1 1 50%;
     gap: 40px;
-    /* background-color: red; */
-    margin: 2rem;
-    
+    margin: 2rem;   
 }
 
 .text-container {
+    margin: 0 auto;
     max-width: max(40%, 300px);
+    text-align: center;
+    position: relative;
 }
 
 .text-container h1 {
     font-size: 75px;
-    /* line-height: 45%; */
+    text-align: center;
  } 
 
 .text-container p {
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 300;
  }  
 
- /* Segunda section */
+ /* Intro */
 
  .about-content {
     background-color: #ff7e14;
@@ -261,7 +240,7 @@ button {
     color: #000000;
     display: flex;
     justify-content:space-between;
-    align-items: center ;
+    align-items: center;
     padding: 1rem;
     
  }
@@ -269,7 +248,6 @@ button {
 .about-content h2 {
     margin-right: 3rem;
     font-size: 30px;
-    /* background-color: aqua; */
     max-width: 200px;
     margin: 2rem;
 
@@ -281,6 +259,16 @@ button {
 
 
 @media (max-width: 768px) {
+
+    .text-container h1 {
+        font-size: 45px;
+        text-align: center;
+        padding-bottom: 1rem;
+    }
+
+    .text-container p {
+        font-size: 20px;
+     }  
     
     .about-content {
         flex-direction: column;
@@ -288,19 +276,25 @@ button {
         font-size: 20px ;
     }
     
-    .about-content h2 { 
+    .about-content {
+        justify-content: center;
+        height: 350px;
+        width: 60%;
+    }
+
+    .about-content h2 {
        margin: 1rem;
-       font-size: 20px;
+       font-size: 25px;
     }    
 
-    
     .about-content p {
         font-size: 14px;
         max-width: 200px;
     }
+    
 }
 
-/* Pasos */
+/* Iconos */
 
 
 .item-container {
@@ -333,7 +327,6 @@ button {
 
 /* Animaciones */
 
-
 .item-content:nth-child(1) {
     animation : floating 3s ease-in-out infinite alternate;
 }
@@ -350,8 +343,6 @@ button {
     animation : floating 3s 1.5s ease-in-out infinite alternate;
 }
 
-
-
 @keyframes floating {
     from {
         transform: translateY(0);
@@ -362,21 +353,18 @@ button {
 }
 
 
+
  @media (max-width: 992px) {
- 
-     
-     
+   
      .section {
         max-width: 100%;
      }
 
      .item-container  {
-        /* background-color: aqua; */
         justify-content: center;
         align-items: center;
         flex-direction: row;
         flex-wrap: wrap;
-    
      }
 
     
@@ -395,10 +383,27 @@ button {
      
      .item-content {
         margin: 0;
-        padding:15px;    
+        padding:15px; 
+        animation: none;   
     }
 
-    } 
+    .item-content:nth-child(1){
+        animation: none;
+    }
+
+    .item-content:nth-child(2){
+        animation: none;
+    }
+
+    .item-content:nth-child(3){
+        animation: none;
+    }
+
+    .item-content:nth-child(4){
+        animation: none;
+    }
+} 
+
     
 
 /*  Cards Salas */
@@ -433,7 +438,6 @@ button {
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    /* background-color: grey; */
     position: relative;
     
 } 
@@ -442,6 +446,14 @@ button {
 .salas-content {
     position: absolute;
     bottom: -10px;
+}
+
+
+.salas-content button:hover {
+    font-size: 16px;
+    height: 70px;
+    width: 160px;
+    transition: all 0.1s linear;
 }
 
 
@@ -456,6 +468,7 @@ button {
 
 .btn-responsive {
     display: block;
+    font-size: 17px;
 }
 
 
@@ -479,7 +492,7 @@ button {
 
  h3 { 
     font-size: 50px;
-    padding-bottom: 1rem;
+    padding-bottom: 1rem; 
 }
  
 
@@ -519,20 +532,18 @@ span {
     h3{
         font-size: 35px;
     }
-
     
     .registro-container p {
-       font-size: 15px; 
-       /* padding: 0; */
+       font-size: 15px;
     }
 
     .registro {
-        /* background-color: palevioletred; */
         padding: 1rem;
     }
 
 }
 
+/* Contacto */
 
 .contacto-container {
     display: flex;
@@ -551,8 +562,8 @@ span {
 }
 
 h4 {
-    font-size: 45px;
-    padding-bottom: 1rem;
+    font-size: 50px;
+    padding-bottom: 3rem;
 }
 
 .contacto {
@@ -573,7 +584,6 @@ h4 {
 
     .contacto-container {
     flex-direction: column;
-    /* height: 400px; */
     }
     
     .contacto-items {
@@ -589,6 +599,8 @@ h4 {
     
     }
 }
+
+/* Footer */
 
 
 .footer {
@@ -620,19 +632,15 @@ h4 {
 
     .footer {
         flex-direction: column;
-        /* height: 250px; */
-
     }
 
     .logo-footer img{
         justify-content: center;
         align-items: center;
-        /* background-color: aqua; */
         width: 150px;
     }
 
+    .redes-footer {
+     margin-bottom: 1rem; 
+    }
 }
-.redes-footer {
-   margin-bottom: 1rem; 
-}
-
