--- a/styleslogin.css
+++ b/styleslogin.css
@@ -15,6 +15,16 @@ body {
     max-width: 100%;
 }
 
+img {
+    max-width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+
+
 .login-container {
     background-color: #ff7e14;
     height: 460px;
@@ -30,7 +40,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 6rem;
+    margin-bottom: 6rem;
     font-family: "Nunito", sans-serif;
 }
 
