--- a/styleslogin.css
+++ b/styleslogin.css
@@ -33,6 +33,7 @@ img {
     box-shadow: 0 0 20px 7px rgba(255, 142, 50, 0.55);
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10rem;
 }
 
 .login-content {
@@ -42,6 +43,7 @@ img {
     flex-direction: column;
     margin-bottom: 6rem;
     font-family: "Nunito", sans-serif;
+    background-color: aqua;
 }
 
 
@@ -123,6 +125,6 @@ button:hover {
 @media (max-width: 992px) {
 
     .login-container {
-      margin-bottom: 3rem;
+      margin-bottom: 6rem;
     }
 }
